--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.linkkit.aiot_android_demo"
         minSdkVersion 19
         targetSdkVersion 29
